--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "repeat-action",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.2",
+  "description": "Smarter setInterval.",
+  "main": "dist/repeat.js",
   "author": "Dima Kurguzov <koorgoo@gmail.com>",
   "license": "MIT",
-  "main": "dist/repeat.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/koorgoo/repeat.js"
+  },
   "devDependencies": {
     "babel-cli": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
